<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_add_to_playlist"
        android:title="@string/add_to_playlist"
        android:icon="@android:drawable/ic_input_add" />

    <item
        android:id="@+id/menu_remove_from_playlist"
        android:title="@string/remove_from_playlist"
        android:icon="@android:drawable/ic_menu_close_clear_cancel" />

    <item
        android:id="@+id/menu_song_details"
        android:title="@string/song_details"
        android:icon="@android:drawable/ic_menu_info_details" />

    <item
        android:id="@+id/menu_delete_from_device"
        android:title="@string/delete_from_device"
        android:icon="@android:drawable/ic_menu_delete" />

</menu>

    <!-- 3. Salva il file
    4. Vai in SongAdapter.kt e controlla se l'errore è sparito
    5. Dimmi "fatto fix 1" -->